examples/test/testpolicy13196.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13196
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key42: value15
      key34: value37
      key6: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value25
      podSelector:
        matchLabels:
          key30: value13
          key28: value10
          key31: value42
